# IOT

./: .cproject  .project  .projectchecksums  .projectlinkstore  README.md  readme.md  vscode.conf  zigbee_minimal.pintool  zigbee_minimal.slcp  zigbee_minimal.slps
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .zigbee_minimal.app_log.cedit  .zigbee_minimal.iostream_usartvcom.cedit  .zigbee_minimal.spidrv.cedit  .zigbee_minimal.spidrv_core.cedit  .zigbee_minimal.spidrv_usartinst.cedit  .zigbee_minimal.spidrv_usartrfid.cedit  .zigbee_minimal.spidrvinst.cedit  .zigbee_minimal.spidrvrfid.cedit
GNU ARM v12.2.1 - Default/: app.d  main.d  makefile  objects.mk  sources.mk  subdir.mk  zigbee_minimal.axf  zigbee_minimal.hex  zigbee_minimal.map  zigbee_minimal.s37
GNU ARM v12.2.1 - Default/autogen/: sl_board_default_init.d  sl_cli_command_table.d  sl_cli_instances.d  sl_cluster_service_gen.d  sl_event_handler.d  sl_iostream_handles.d  sl_iostream_init_eusart_instances.d  subdir.mk  (+13 more)
autogen/: linkerfile.ld  sl_cli_command_table.c  sl_cli_command_table.html  sl_component_catalog.h  sl_event_handler.c  sl_iostream_handles.h  sl_power_manager_handler.c  sl_rail_util_ieee802154_phy_select.c  sl_spidrv_init.c  sl_spidrv_instances.h  zap-cli.c  zap-config.h  zap-print.h  zap-tokens.h  zigbee_common_callback_dispatcher.c  zigbee_common_callback_dispatcher.h  zigbee_stack_callback_dispatcher.c  zigbee_stack_callback_dispatcher.h
config/: network-steering-config.h  pin_config.h  sl_cli_config.h  sl_rail_util_pti_config.h  sl_simple_led_led0_config.h  sl_spidrv_rfid_config.h  sl_spidrv_usart_rfid_config.h
zigbee_minimal_cmake/: CMakeLists.txt  CMakePresets.json  toolchain.cmake  zigbee_minimal.cmake
(+371 files in other folders)
